Used linter from pre-commit repo

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,6 @@
 repos:
-  - repo: local
+  - repo: https://github.com/pycqa/flake8
+    rev: 4.0.1
     hooks:
     - id: flake8
-      name: flake8 linter
       stages: [commit]
-      language: system
-      entry: pipenv run flake8
-      types: [python]
